tests/samples/0029/error.txt
error[P0013]: unexpected token `,`, expected `;`
  --> 0029/code.ara:1:14
  |
1 | const FOO = 1, BAR = 2;
  |              ^

error: failed to parse "0029/code.ara" due to the above issue(s)
 = summary: 1 error(s)

